--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title data-ng-bind="'AngularJS | ' + $state.current.data.pageTitle">SGT |</title>
+	<title data-ng-bind="'SGT | ' + $state.current.data.pageTitle">SGT |</title>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="author" />
