--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="assets/js/angular-setting.js"></script>
     <script src="assets/js/angular-controller.js"></script>
     <script src="assets/js/Mantenedores/controllers.js"></script>
+	<script src="assets/js/Gestion/controllers.js"></script>
     <script src="assets/js/angular-directive.js"></script>
     <script src="assets/js/apps.min.js"></script>
 	<!-- ================== END PAGE LEVEL JS ================== -->
