--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en" ng-app="colorAdminApp">
+<html lang="en" ng-app="colorAdminApp" xmlns="http://www.w3.org/1999/html">
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
@@ -82,6 +82,7 @@
     <script src="assets/js/angular-setting.js"></script>
     <script src="assets/js/angular-controller.js"></script>
     <script src="assets/js/Mantenedores/controllers.js"></script>
+	<script src="assets/js/Facturacion/controllers.js"></script>
 	<script src="assets/js/Gestion/controllers.js"></script>
     <script src="assets/js/angular-directive.js"></script>
     <script src="assets/js/apps.min.js"></script>
