--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script src="assets/js/angular-app.js"></script>
     <script src="assets/js/angular-setting.js"></script>
     <script src="assets/js/angular-controller.js"></script>
-   <!-- <script src="assets/js/Mantenedores/controllers.js"></script>-->
+   <script src="assets/js/Mantenedores/controllers.js"></script>
 	<script src="assets/js/Consulta/controllers.js"></script>
 	<script src="assets/js/Facturacion/controllers.js"></script>
 	<script src="assets/js/Gestion/controllers.js"></script>
